# dt-agent

./: .env.example  .gitignore  .gitmodules  Dockerfile.isaacsim  README.md  docker-compose.yml  hello_inference.py  pyproject.toml
catalog/: asset_catalog.json
scripts/: build_workcell.py  chat_agent.py  chat_tasks.py  observe_capture.py  run_agent.py  sim_client_smoke.py
src/dt_agent/: agent.py  loop.py  prompts.py  sim_server.py  tools.py  tools_tasks.py  vlm.py
