[project]
name = "dt-agent"
version = "0.1.0"
description = "Isaac Sim digital twin authoring agent (PoC)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.55",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dt_agent"]
